Fix overscrolling on mobile

--- a/escape-api/assets/stylesheets/main.css
+++ b/escape-api/assets/stylesheets/main.css
@@ -9,6 +9,7 @@ html, body {
   color: lime;
   font-family: 'Courier New', Courier, monospace;
   height: 99%;
+  overscroll-behavior: none;
 }
 
 a {
